// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pipeline empty with single root transform 1`] = `
Object {
  "components": Object {
    "codersMap": Array [],
    "environmentsMap": Array [],
    "pcollectionsMap": Array [],
    "transformsMap": Array [
      Array [
        "ref_AppliedPTransform_AppliedPTransform_1",
        Object {
          "displayDataList": Array [],
          "environmentId": "",
          "inputsMap": Array [],
          "outputsMap": Array [],
          "spec": Object {
            "payload": "function (_input) {
        throw new Error(\\"Must be implemented by subclasses\\");
    }",
            "urn": "beam:transform:javascript:v1",
          },
          "subtransformsList": Array [],
          "uniqueName": "",
        },
      ],
    ],
    "windowingStrategiesMap": Array [],
  },
  "displayDataList": Array [],
  "requirementsList": Array [],
  "rootTransformIdsList": Array [
    "ref_AppliedPTransform_AppliedPTransform_1",
  ],
}
`;

exports[`Pipeline with a functional ptransform 1`] = `
Object {
  "components": Object {
    "codersMap": Array [
      Array [
        "ref_BytesCoder_BytesCoder_3",
        Object {
          "componentCoderIdsList": Array [],
          "spec": Object {
            "payload": "",
            "urn": "beam:coder:bytes:v1",
          },
        },
      ],
      Array [
        "ref_GlobalWindowCoder_GlobalWindowCoder_5",
        Object {
          "componentCoderIdsList": Array [],
          "spec": Object {
            "payload": "",
            "urn": "beam:coder:global_window:v1",
          },
        },
      ],
    ],
    "environmentsMap": Array [],
    "pcollectionsMap": Array [],
    "transformsMap": Array [
      Array [
        "ref_AppliedPTransform_AppliedPTransform_1",
        Object {
          "displayDataList": Array [],
          "environmentId": "",
          "inputsMap": Array [],
          "outputsMap": Array [],
          "spec": Object {
            "payload": "function (_input) {
        throw new Error(\\"Must be implemented by subclasses\\");
    }",
            "urn": "beam:transform:javascript:v1",
          },
          "subtransformsList": Array [
            "ref_AppliedPTransform_custom transform_2",
          ],
          "uniqueName": "",
        },
      ],
      Array [
        "ref_AppliedPTransform_custom transform_2",
        Object {
          "displayDataList": Array [],
          "environmentId": "",
          "inputsMap": Array [],
          "outputsMap": Array [
            Array [
              "None",
              "ref_PBegin_PBegin_6",
            ],
          ],
          "spec": Object {
            "payload": "function (e) { return e; }",
            "urn": "beam:transform:javascript:v1",
          },
          "subtransformsList": Array [],
          "uniqueName": "custom transform",
        },
      ],
    ],
    "windowingStrategiesMap": Array [
      Array [
        "ref_Windowing_Windowing_4",
        Object {
          "accumulationMode": 1,
          "allowedLateness": 0,
          "assignsToOneWindow": true,
          "closingBehavior": 1,
          "environmentId": "",
          "mergeStatus": 1,
          "ontimebehavior": 1,
          "outputTime": 1,
          "trigger": Object {
            "afterAll": undefined,
            "afterAny": undefined,
            "afterEach": undefined,
            "afterEndOfWindow": undefined,
            "afterProcessingTime": undefined,
            "afterSynchronizedProcessingTime": undefined,
            "always": undefined,
            "elementCount": undefined,
            "never": undefined,
            "orFinally": undefined,
            "pb_default": Object {},
            "repeat": undefined,
          },
          "windowCoderId": "TODO",
          "windowFn": Object {
            "payload": "",
            "urn": "beam:window_fn:global_windows:v1",
          },
        },
      ],
    ],
  },
  "displayDataList": Array [],
  "requirementsList": Array [],
  "rootTransformIdsList": Array [
    "ref_AppliedPTransform_AppliedPTransform_1",
  ],
}
`;

exports[`Pipeline with create and print 1`] = `
Object {
  "components": Object {
    "codersMap": Array [
      Array [
        "ref_BytesCoder_BytesCoder_13",
        Object {
          "componentCoderIdsList": Array [],
          "spec": Object {
            "payload": "",
            "urn": "beam:coder:bytes:v1",
          },
        },
      ],
      Array [
        "ref_BytesCoder_BytesCoder_17",
        Object {
          "componentCoderIdsList": Array [],
          "spec": Object {
            "payload": "",
            "urn": "beam:coder:bytes:v1",
          },
        },
      ],
      Array [
        "ref_BytesCoder_BytesCoder_3",
        Object {
          "componentCoderIdsList": Array [],
          "spec": Object {
            "payload": "",
            "urn": "beam:coder:bytes:v1",
          },
        },
      ],
      Array [
        "ref_BytesCoder_BytesCoder_8",
        Object {
          "componentCoderIdsList": Array [],
          "spec": Object {
            "payload": "",
            "urn": "beam:coder:bytes:v1",
          },
        },
      ],
      Array [
        "ref_GlobalWindowCoder_GlobalWindowCoder_10",
        Object {
          "componentCoderIdsList": Array [],
          "spec": Object {
            "payload": "",
            "urn": "beam:coder:global_window:v1",
          },
        },
      ],
      Array [
        "ref_GlobalWindowCoder_GlobalWindowCoder_15",
        Object {
          "componentCoderIdsList": Array [],
          "spec": Object {
            "payload": "",
            "urn": "beam:coder:global_window:v1",
          },
        },
      ],
      Array [
        "ref_GlobalWindowCoder_GlobalWindowCoder_19",
        Object {
          "componentCoderIdsList": Array [],
          "spec": Object {
            "payload": "",
            "urn": "beam:coder:global_window:v1",
          },
        },
      ],
      Array [
        "ref_GlobalWindowCoder_GlobalWindowCoder_5",
        Object {
          "componentCoderIdsList": Array [],
          "spec": Object {
            "payload": "",
            "urn": "beam:coder:global_window:v1",
          },
        },
      ],
    ],
    "environmentsMap": Array [],
    "pcollectionsMap": Array [
      Array [
        "ref_PCollection_PCollection_11",
        Object {
          "coderId": "TODO",
          "displayDataList": Array [],
          "isBounded": 2,
          "uniqueName": "ref_PCollection_PCollection_11",
          "windowingStrategyId": "TODO",
        },
      ],
      Array [
        "ref_PCollection_PCollection_20",
        Object {
          "coderId": "TODO",
          "displayDataList": Array [],
          "isBounded": 2,
          "uniqueName": "ref_PCollection_PCollection_20",
          "windowingStrategyId": "TODO",
        },
      ],
    ],
    "transformsMap": Array [
      Array [
        "ref_AppliedPTransform_AppliedPTransform_1",
        Object {
          "displayDataList": Array [],
          "environmentId": "",
          "inputsMap": Array [],
          "outputsMap": Array [],
          "spec": Object {
            "payload": "function (_input) {
        throw new Error(\\"Must be implemented by subclasses\\");
    }",
            "urn": "beam:transform:javascript:v1",
          },
          "subtransformsList": Array [
            "ref_AppliedPTransform_Create_2",
          ],
          "uniqueName": "",
        },
      ],
      Array [
        "ref_AppliedPTransform_Create/FlatMap/ParDo_16",
        Object {
          "displayDataList": Array [],
          "environmentId": "",
          "inputsMap": Array [
            Array [
              "0",
              "ref_PCollection_PCollection_11",
            ],
          ],
          "outputsMap": Array [
            Array [
              "None",
              "ref_PCollection_PCollection_20",
            ],
          ],
          "spec": Object {
            "payload": "{\\"doFn\\":{\\"urn\\":\\"beam:dofn:javascript:v1\\",\\"payload\\":\\"function () { return _this.values; }\\"},\\"sideInputsMap\\":[],\\"stateSpecsMap\\":[],\\"timerFamilySpecsMap\\":[],\\"restrictionCoderId\\":\\"\\",\\"requestsFinalization\\":false,\\"requiresTimeSortedInput\\":false,\\"requiresStableInput\\":false}",
            "urn": "beam:transform:pardo:v1",
          },
          "subtransformsList": Array [],
          "uniqueName": "Create/FlatMap/ParDo",
        },
      ],
      Array [
        "ref_AppliedPTransform_Create/FlatMap_12",
        Object {
          "displayDataList": Array [],
          "environmentId": "",
          "inputsMap": Array [
            Array [
              "0",
              "ref_PCollection_PCollection_11",
            ],
          ],
          "outputsMap": Array [
            Array [
              "None",
              "ref_PCollection_PCollection_20",
            ],
          ],
          "spec": Object {
            "payload": "function (input) {
        return input.apply(pardo_1.ParDo, {
            doFn: new dofn_1.CallableWrapperDoFn(this.func)
        });
    }",
            "urn": "beam:transform:javascript:v1",
          },
          "subtransformsList": Array [
            "ref_AppliedPTransform_Create/FlatMap/ParDo_16",
          ],
          "uniqueName": "Create/FlatMap",
        },
      ],
      Array [
        "ref_AppliedPTransform_Create/Impulse_7",
        Object {
          "displayDataList": Array [],
          "environmentId": "",
          "inputsMap": Array [
            Array [
              "0",
              "ref_PBegin_PBegin_6",
            ],
          ],
          "outputsMap": Array [
            Array [
              "None",
              "ref_PCollection_PCollection_11",
            ],
          ],
          "spec": Object {
            "payload": "",
            "urn": "beam:transform:impulse:v1",
          },
          "subtransformsList": Array [],
          "uniqueName": "Create/Impulse",
        },
      ],
      Array [
        "ref_AppliedPTransform_Create_2",
        Object {
          "displayDataList": Array [],
          "environmentId": "",
          "inputsMap": Array [],
          "outputsMap": Array [
            Array [
              "None",
              "ref_PCollection_PCollection_20",
            ],
          ],
          "spec": Object {
            "payload": "function (input) {
        var _this = this;
        return input.apply(impulse_1.Impulse).apply(flatmap_1.FlatMap, {
            func: function () { return _this.values; }
        });
    }",
            "urn": "beam:transform:javascript:v1",
          },
          "subtransformsList": Array [
            "ref_AppliedPTransform_Create/Impulse_7",
            "ref_AppliedPTransform_Create/FlatMap_12",
          ],
          "uniqueName": "Create",
        },
      ],
    ],
    "windowingStrategiesMap": Array [
      Array [
        "ref_Windowing_Windowing_14",
        Object {
          "accumulationMode": 1,
          "allowedLateness": 0,
          "assignsToOneWindow": true,
          "closingBehavior": 1,
          "environmentId": "",
          "mergeStatus": 1,
          "ontimebehavior": 1,
          "outputTime": 1,
          "trigger": Object {
            "afterAll": undefined,
            "afterAny": undefined,
            "afterEach": undefined,
            "afterEndOfWindow": undefined,
            "afterProcessingTime": undefined,
            "afterSynchronizedProcessingTime": undefined,
            "always": undefined,
            "elementCount": undefined,
            "never": undefined,
            "orFinally": undefined,
            "pb_default": Object {},
            "repeat": undefined,
          },
          "windowCoderId": "TODO",
          "windowFn": Object {
            "payload": "",
            "urn": "beam:window_fn:global_windows:v1",
          },
        },
      ],
      Array [
        "ref_Windowing_Windowing_18",
        Object {
          "accumulationMode": 1,
          "allowedLateness": 0,
          "assignsToOneWindow": true,
          "closingBehavior": 1,
          "environmentId": "",
          "mergeStatus": 1,
          "ontimebehavior": 1,
          "outputTime": 1,
          "trigger": Object {
            "afterAll": undefined,
            "afterAny": undefined,
            "afterEach": undefined,
            "afterEndOfWindow": undefined,
            "afterProcessingTime": undefined,
            "afterSynchronizedProcessingTime": undefined,
            "always": undefined,
            "elementCount": undefined,
            "never": undefined,
            "orFinally": undefined,
            "pb_default": Object {},
            "repeat": undefined,
          },
          "windowCoderId": "TODO",
          "windowFn": Object {
            "payload": "",
            "urn": "beam:window_fn:global_windows:v1",
          },
        },
      ],
      Array [
        "ref_Windowing_Windowing_4",
        Object {
          "accumulationMode": 1,
          "allowedLateness": 0,
          "assignsToOneWindow": true,
          "closingBehavior": 1,
          "environmentId": "",
          "mergeStatus": 1,
          "ontimebehavior": 1,
          "outputTime": 1,
          "trigger": Object {
            "afterAll": undefined,
            "afterAny": undefined,
            "afterEach": undefined,
            "afterEndOfWindow": undefined,
            "afterProcessingTime": undefined,
            "afterSynchronizedProcessingTime": undefined,
            "always": undefined,
            "elementCount": undefined,
            "never": undefined,
            "orFinally": undefined,
            "pb_default": Object {},
            "repeat": undefined,
          },
          "windowCoderId": "TODO",
          "windowFn": Object {
            "payload": "",
            "urn": "beam:window_fn:global_windows:v1",
          },
        },
      ],
      Array [
        "ref_Windowing_Windowing_9",
        Object {
          "accumulationMode": 1,
          "allowedLateness": 0,
          "assignsToOneWindow": true,
          "closingBehavior": 1,
          "environmentId": "",
          "mergeStatus": 1,
          "ontimebehavior": 1,
          "outputTime": 1,
          "trigger": Object {
            "afterAll": undefined,
            "afterAny": undefined,
            "afterEach": undefined,
            "afterEndOfWindow": undefined,
            "afterProcessingTime": undefined,
            "afterSynchronizedProcessingTime": undefined,
            "always": undefined,
            "elementCount": undefined,
            "never": undefined,
            "orFinally": undefined,
            "pb_default": Object {},
            "repeat": undefined,
          },
          "windowCoderId": "TODO",
          "windowFn": Object {
            "payload": "",
            "urn": "beam:window_fn:global_windows:v1",
          },
        },
      ],
    ],
  },
  "displayDataList": Array [],
  "requirementsList": Array [],
  "rootTransformIdsList": Array [
    "ref_AppliedPTransform_AppliedPTransform_1",
  ],
}
`;

exports[`Pipeline with custom ptransform 1`] = `
Object {
  "components": Object {
    "codersMap": Array [
      Array [
        "ref_BytesCoder_BytesCoder_14",
        Object {
          "componentCoderIdsList": Array [],
          "spec": Object {
            "payload": "",
            "urn": "beam:coder:bytes:v1",
          },
        },
      ],
      Array [
        "ref_BytesCoder_BytesCoder_3",
        Object {
          "componentCoderIdsList": Array [],
          "spec": Object {
            "payload": "",
            "urn": "beam:coder:bytes:v1",
          },
        },
      ],
      Array [
        "ref_BytesCoder_BytesCoder_9",
        Object {
          "componentCoderIdsList": Array [],
          "spec": Object {
            "payload": "",
            "urn": "beam:coder:bytes:v1",
          },
        },
      ],
      Array [
        "ref_GlobalWindowCoder_GlobalWindowCoder_11",
        Object {
          "componentCoderIdsList": Array [],
          "spec": Object {
            "payload": "",
            "urn": "beam:coder:global_window:v1",
          },
        },
      ],
      Array [
        "ref_GlobalWindowCoder_GlobalWindowCoder_16",
        Object {
          "componentCoderIdsList": Array [],
          "spec": Object {
            "payload": "",
            "urn": "beam:coder:global_window:v1",
          },
        },
      ],
      Array [
        "ref_GlobalWindowCoder_GlobalWindowCoder_5",
        Object {
          "componentCoderIdsList": Array [],
          "spec": Object {
            "payload": "",
            "urn": "beam:coder:global_window:v1",
          },
        },
      ],
    ],
    "environmentsMap": Array [],
    "pcollectionsMap": Array [
      Array [
        "ref_PCollection_PCollection_17",
        Object {
          "coderId": "TODO",
          "displayDataList": Array [],
          "isBounded": 2,
          "uniqueName": "ref_PCollection_PCollection_17",
          "windowingStrategyId": "TODO",
        },
      ],
      Array [
        "ref_PCollection_PCollection_7",
        Object {
          "coderId": "TODO",
          "displayDataList": Array [],
          "isBounded": 2,
          "uniqueName": "ref_PCollection_PCollection_7",
          "windowingStrategyId": "TODO",
        },
      ],
    ],
    "transformsMap": Array [
      Array [
        "ref_AppliedPTransform_AppliedPTransform_1",
        Object {
          "displayDataList": Array [],
          "environmentId": "",
          "inputsMap": Array [],
          "outputsMap": Array [],
          "spec": Object {
            "payload": "function (_input) {
        throw new Error(\\"Must be implemented by subclasses\\");
    }",
            "urn": "beam:transform:javascript:v1",
          },
          "subtransformsList": Array [
            "ref_AppliedPTransform_test_2",
            "ref_AppliedPTransform_custom transform_8",
          ],
          "uniqueName": "",
        },
      ],
      Array [
        "ref_AppliedPTransform_custom transform/nested subtransform 1_13",
        Object {
          "displayDataList": Array [],
          "environmentId": "",
          "inputsMap": Array [
            Array [
              "0",
              "ref_PBegin_PBegin_12",
            ],
          ],
          "outputsMap": Array [
            Array [
              "None",
              "ref_PCollection_PCollection_17",
            ],
          ],
          "spec": Object {
            "payload": "{\\"doFn\\":{\\"urn\\":\\"beam:dofn:javascript:v1\\",\\"payload\\":\\"function (_element) {\\\\n        throw new Error('Needs to be implemented in subclasses');\\\\n    }\\"},\\"sideInputsMap\\":[],\\"stateSpecsMap\\":[],\\"timerFamilySpecsMap\\":[],\\"restrictionCoderId\\":\\"\\",\\"requestsFinalization\\":false,\\"requiresTimeSortedInput\\":false,\\"requiresStableInput\\":false}",
            "urn": "beam:transform:pardo:v1",
          },
          "subtransformsList": Array [],
          "uniqueName": "custom transform/nested subtransform 1",
        },
      ],
      Array [
        "ref_AppliedPTransform_custom transform_8",
        Object {
          "displayDataList": Array [],
          "environmentId": "",
          "inputsMap": Array [],
          "outputsMap": Array [
            Array [
              "None",
              "ref_PCollection_PCollection_17",
            ],
          ],
          "spec": Object {
            "payload": "function (pcoll) {
                return pcoll.apply(index_1.ParDo, { doFn: new index_1.DoFn(), label: \\"nested subtransform 1\\" });
            }",
            "urn": "beam:transform:javascript:v1",
          },
          "subtransformsList": Array [
            "ref_AppliedPTransform_custom transform/nested subtransform 1_13",
          ],
          "uniqueName": "custom transform",
        },
      ],
      Array [
        "ref_AppliedPTransform_test_2",
        Object {
          "displayDataList": Array [],
          "environmentId": "",
          "inputsMap": Array [],
          "outputsMap": Array [
            Array [
              "None",
              "ref_PCollection_PCollection_7",
            ],
          ],
          "spec": Object {
            "payload": "{\\"doFn\\":{\\"urn\\":\\"beam:dofn:javascript:v1\\",\\"payload\\":\\"function (_element) {\\\\n        throw new Error('Needs to be implemented in subclasses');\\\\n    }\\"},\\"sideInputsMap\\":[],\\"stateSpecsMap\\":[],\\"timerFamilySpecsMap\\":[],\\"restrictionCoderId\\":\\"\\",\\"requestsFinalization\\":false,\\"requiresTimeSortedInput\\":false,\\"requiresStableInput\\":false}",
            "urn": "beam:transform:pardo:v1",
          },
          "subtransformsList": Array [],
          "uniqueName": "test",
        },
      ],
    ],
    "windowingStrategiesMap": Array [
      Array [
        "ref_Windowing_Windowing_10",
        Object {
          "accumulationMode": 1,
          "allowedLateness": 0,
          "assignsToOneWindow": true,
          "closingBehavior": 1,
          "environmentId": "",
          "mergeStatus": 1,
          "ontimebehavior": 1,
          "outputTime": 1,
          "trigger": Object {
            "afterAll": undefined,
            "afterAny": undefined,
            "afterEach": undefined,
            "afterEndOfWindow": undefined,
            "afterProcessingTime": undefined,
            "afterSynchronizedProcessingTime": undefined,
            "always": undefined,
            "elementCount": undefined,
            "never": undefined,
            "orFinally": undefined,
            "pb_default": Object {},
            "repeat": undefined,
          },
          "windowCoderId": "TODO",
          "windowFn": Object {
            "payload": "",
            "urn": "beam:window_fn:global_windows:v1",
          },
        },
      ],
      Array [
        "ref_Windowing_Windowing_15",
        Object {
          "accumulationMode": 1,
          "allowedLateness": 0,
          "assignsToOneWindow": true,
          "closingBehavior": 1,
          "environmentId": "",
          "mergeStatus": 1,
          "ontimebehavior": 1,
          "outputTime": 1,
          "trigger": Object {
            "afterAll": undefined,
            "afterAny": undefined,
            "afterEach": undefined,
            "afterEndOfWindow": undefined,
            "afterProcessingTime": undefined,
            "afterSynchronizedProcessingTime": undefined,
            "always": undefined,
            "elementCount": undefined,
            "never": undefined,
            "orFinally": undefined,
            "pb_default": Object {},
            "repeat": undefined,
          },
          "windowCoderId": "TODO",
          "windowFn": Object {
            "payload": "",
            "urn": "beam:window_fn:global_windows:v1",
          },
        },
      ],
      Array [
        "ref_Windowing_Windowing_4",
        Object {
          "accumulationMode": 1,
          "allowedLateness": 0,
          "assignsToOneWindow": true,
          "closingBehavior": 1,
          "environmentId": "",
          "mergeStatus": 1,
          "ontimebehavior": 1,
          "outputTime": 1,
          "trigger": Object {
            "afterAll": undefined,
            "afterAny": undefined,
            "afterEach": undefined,
            "afterEndOfWindow": undefined,
            "afterProcessingTime": undefined,
            "afterSynchronizedProcessingTime": undefined,
            "always": undefined,
            "elementCount": undefined,
            "never": undefined,
            "orFinally": undefined,
            "pb_default": Object {},
            "repeat": undefined,
          },
          "windowCoderId": "TODO",
          "windowFn": Object {
            "payload": "",
            "urn": "beam:window_fn:global_windows:v1",
          },
        },
      ],
    ],
  },
  "displayDataList": Array [],
  "requirementsList": Array [],
  "rootTransformIdsList": Array [
    "ref_AppliedPTransform_AppliedPTransform_1",
  ],
}
`;

exports[`Pipeline with multiple subtransforms 1`] = `
Object {
  "components": Object {
    "codersMap": Array [
      Array [
        "ref_BytesCoder_BytesCoder_14",
        Object {
          "componentCoderIdsList": Array [],
          "spec": Object {
            "payload": "",
            "urn": "beam:coder:bytes:v1",
          },
        },
      ],
      Array [
        "ref_BytesCoder_BytesCoder_19",
        Object {
          "componentCoderIdsList": Array [],
          "spec": Object {
            "payload": "",
            "urn": "beam:coder:bytes:v1",
          },
        },
      ],
      Array [
        "ref_BytesCoder_BytesCoder_24",
        Object {
          "componentCoderIdsList": Array [],
          "spec": Object {
            "payload": "",
            "urn": "beam:coder:bytes:v1",
          },
        },
      ],
      Array [
        "ref_BytesCoder_BytesCoder_3",
        Object {
          "componentCoderIdsList": Array [],
          "spec": Object {
            "payload": "",
            "urn": "beam:coder:bytes:v1",
          },
        },
      ],
      Array [
        "ref_BytesCoder_BytesCoder_9",
        Object {
          "componentCoderIdsList": Array [],
          "spec": Object {
            "payload": "",
            "urn": "beam:coder:bytes:v1",
          },
        },
      ],
      Array [
        "ref_GlobalWindowCoder_GlobalWindowCoder_11",
        Object {
          "componentCoderIdsList": Array [],
          "spec": Object {
            "payload": "",
            "urn": "beam:coder:global_window:v1",
          },
        },
      ],
      Array [
        "ref_GlobalWindowCoder_GlobalWindowCoder_16",
        Object {
          "componentCoderIdsList": Array [],
          "spec": Object {
            "payload": "",
            "urn": "beam:coder:global_window:v1",
          },
        },
      ],
      Array [
        "ref_GlobalWindowCoder_GlobalWindowCoder_21",
        Object {
          "componentCoderIdsList": Array [],
          "spec": Object {
            "payload": "",
            "urn": "beam:coder:global_window:v1",
          },
        },
      ],
      Array [
        "ref_GlobalWindowCoder_GlobalWindowCoder_26",
        Object {
          "componentCoderIdsList": Array [],
          "spec": Object {
            "payload": "",
            "urn": "beam:coder:global_window:v1",
          },
        },
      ],
      Array [
        "ref_GlobalWindowCoder_GlobalWindowCoder_5",
        Object {
          "componentCoderIdsList": Array [],
          "spec": Object {
            "payload": "",
            "urn": "beam:coder:global_window:v1",
          },
        },
      ],
    ],
    "environmentsMap": Array [],
    "pcollectionsMap": Array [
      Array [
        "ref_PCollection_PCollection_12",
        Object {
          "coderId": "TODO",
          "displayDataList": Array [],
          "isBounded": 2,
          "uniqueName": "ref_PCollection_PCollection_12",
          "windowingStrategyId": "TODO",
        },
      ],
      Array [
        "ref_PCollection_PCollection_17",
        Object {
          "coderId": "TODO",
          "displayDataList": Array [],
          "isBounded": 2,
          "uniqueName": "ref_PCollection_PCollection_17",
          "windowingStrategyId": "TODO",
        },
      ],
      Array [
        "ref_PCollection_PCollection_22",
        Object {
          "coderId": "TODO",
          "displayDataList": Array [],
          "isBounded": 2,
          "uniqueName": "ref_PCollection_PCollection_22",
          "windowingStrategyId": "TODO",
        },
      ],
      Array [
        "ref_PCollection_PCollection_27",
        Object {
          "coderId": "TODO",
          "displayDataList": Array [],
          "isBounded": 2,
          "uniqueName": "ref_PCollection_PCollection_27",
          "windowingStrategyId": "TODO",
        },
      ],
      Array [
        "ref_PCollection_PCollection_7",
        Object {
          "coderId": "TODO",
          "displayDataList": Array [],
          "isBounded": 2,
          "uniqueName": "ref_PCollection_PCollection_7",
          "windowingStrategyId": "TODO",
        },
      ],
    ],
    "transformsMap": Array [
      Array [
        "ref_AppliedPTransform_A_2",
        Object {
          "displayDataList": Array [],
          "environmentId": "",
          "inputsMap": Array [],
          "outputsMap": Array [
            Array [
              "None",
              "ref_PCollection_PCollection_7",
            ],
          ],
          "spec": Object {
            "payload": "{\\"doFn\\":{\\"urn\\":\\"beam:dofn:javascript:v1\\",\\"payload\\":\\"function (_element) {\\\\n        throw new Error('Needs to be implemented in subclasses');\\\\n    }\\"},\\"sideInputsMap\\":[],\\"stateSpecsMap\\":[],\\"timerFamilySpecsMap\\":[],\\"restrictionCoderId\\":\\"\\",\\"requestsFinalization\\":false,\\"requiresTimeSortedInput\\":false,\\"requiresStableInput\\":false}",
            "urn": "beam:transform:pardo:v1",
          },
          "subtransformsList": Array [],
          "uniqueName": "A",
        },
      ],
      Array [
        "ref_AppliedPTransform_AppliedPTransform_1",
        Object {
          "displayDataList": Array [],
          "environmentId": "",
          "inputsMap": Array [],
          "outputsMap": Array [],
          "spec": Object {
            "payload": "function (_input) {
        throw new Error(\\"Must be implemented by subclasses\\");
    }",
            "urn": "beam:transform:javascript:v1",
          },
          "subtransformsList": Array [
            "ref_AppliedPTransform_A_2",
            "ref_AppliedPTransform_B-1_8",
            "ref_AppliedPTransform_C-1_13",
            "ref_AppliedPTransform_B-2_18",
            "ref_AppliedPTransform_C-2_23",
          ],
          "uniqueName": "",
        },
      ],
      Array [
        "ref_AppliedPTransform_B-1_8",
        Object {
          "displayDataList": Array [],
          "environmentId": "",
          "inputsMap": Array [
            Array [
              "0",
              "ref_PCollection_PCollection_7",
            ],
          ],
          "outputsMap": Array [
            Array [
              "None",
              "ref_PCollection_PCollection_12",
            ],
          ],
          "spec": Object {
            "payload": "{\\"doFn\\":{\\"urn\\":\\"beam:dofn:javascript:v1\\",\\"payload\\":\\"function (_element) {\\\\n        throw new Error('Needs to be implemented in subclasses');\\\\n    }\\"},\\"sideInputsMap\\":[],\\"stateSpecsMap\\":[],\\"timerFamilySpecsMap\\":[],\\"restrictionCoderId\\":\\"\\",\\"requestsFinalization\\":false,\\"requiresTimeSortedInput\\":false,\\"requiresStableInput\\":false}",
            "urn": "beam:transform:pardo:v1",
          },
          "subtransformsList": Array [],
          "uniqueName": "B-1",
        },
      ],
      Array [
        "ref_AppliedPTransform_B-2_18",
        Object {
          "displayDataList": Array [],
          "environmentId": "",
          "inputsMap": Array [
            Array [
              "0",
              "ref_PCollection_PCollection_7",
            ],
          ],
          "outputsMap": Array [
            Array [
              "None",
              "ref_PCollection_PCollection_22",
            ],
          ],
          "spec": Object {
            "payload": "{\\"doFn\\":{\\"urn\\":\\"beam:dofn:javascript:v1\\",\\"payload\\":\\"function (_element) {\\\\n        throw new Error('Needs to be implemented in subclasses');\\\\n    }\\"},\\"sideInputsMap\\":[],\\"stateSpecsMap\\":[],\\"timerFamilySpecsMap\\":[],\\"restrictionCoderId\\":\\"\\",\\"requestsFinalization\\":false,\\"requiresTimeSortedInput\\":false,\\"requiresStableInput\\":false}",
            "urn": "beam:transform:pardo:v1",
          },
          "subtransformsList": Array [],
          "uniqueName": "B-2",
        },
      ],
      Array [
        "ref_AppliedPTransform_C-1_13",
        Object {
          "displayDataList": Array [],
          "environmentId": "",
          "inputsMap": Array [
            Array [
              "0",
              "ref_PCollection_PCollection_12",
            ],
          ],
          "outputsMap": Array [
            Array [
              "None",
              "ref_PCollection_PCollection_17",
            ],
          ],
          "spec": Object {
            "payload": "{\\"doFn\\":{\\"urn\\":\\"beam:dofn:javascript:v1\\",\\"payload\\":\\"function (_element) {\\\\n        throw new Error('Needs to be implemented in subclasses');\\\\n    }\\"},\\"sideInputsMap\\":[],\\"stateSpecsMap\\":[],\\"timerFamilySpecsMap\\":[],\\"restrictionCoderId\\":\\"\\",\\"requestsFinalization\\":false,\\"requiresTimeSortedInput\\":false,\\"requiresStableInput\\":false}",
            "urn": "beam:transform:pardo:v1",
          },
          "subtransformsList": Array [],
          "uniqueName": "C-1",
        },
      ],
      Array [
        "ref_AppliedPTransform_C-2_23",
        Object {
          "displayDataList": Array [],
          "environmentId": "",
          "inputsMap": Array [
            Array [
              "0",
              "ref_PCollection_PCollection_22",
            ],
          ],
          "outputsMap": Array [
            Array [
              "None",
              "ref_PCollection_PCollection_27",
            ],
          ],
          "spec": Object {
            "payload": "{\\"doFn\\":{\\"urn\\":\\"beam:dofn:javascript:v1\\",\\"payload\\":\\"function (_element) {\\\\n        throw new Error('Needs to be implemented in subclasses');\\\\n    }\\"},\\"sideInputsMap\\":[],\\"stateSpecsMap\\":[],\\"timerFamilySpecsMap\\":[],\\"restrictionCoderId\\":\\"\\",\\"requestsFinalization\\":false,\\"requiresTimeSortedInput\\":false,\\"requiresStableInput\\":false}",
            "urn": "beam:transform:pardo:v1",
          },
          "subtransformsList": Array [],
          "uniqueName": "C-2",
        },
      ],
    ],
    "windowingStrategiesMap": Array [
      Array [
        "ref_Windowing_Windowing_10",
        Object {
          "accumulationMode": 1,
          "allowedLateness": 0,
          "assignsToOneWindow": true,
          "closingBehavior": 1,
          "environmentId": "",
          "mergeStatus": 1,
          "ontimebehavior": 1,
          "outputTime": 1,
          "trigger": Object {
            "afterAll": undefined,
            "afterAny": undefined,
            "afterEach": undefined,
            "afterEndOfWindow": undefined,
            "afterProcessingTime": undefined,
            "afterSynchronizedProcessingTime": undefined,
            "always": undefined,
            "elementCount": undefined,
            "never": undefined,
            "orFinally": undefined,
            "pb_default": Object {},
            "repeat": undefined,
          },
          "windowCoderId": "TODO",
          "windowFn": Object {
            "payload": "",
            "urn": "beam:window_fn:global_windows:v1",
          },
        },
      ],
      Array [
        "ref_Windowing_Windowing_15",
        Object {
          "accumulationMode": 1,
          "allowedLateness": 0,
          "assignsToOneWindow": true,
          "closingBehavior": 1,
          "environmentId": "",
          "mergeStatus": 1,
          "ontimebehavior": 1,
          "outputTime": 1,
          "trigger": Object {
            "afterAll": undefined,
            "afterAny": undefined,
            "afterEach": undefined,
            "afterEndOfWindow": undefined,
            "afterProcessingTime": undefined,
            "afterSynchronizedProcessingTime": undefined,
            "always": undefined,
            "elementCount": undefined,
            "never": undefined,
            "orFinally": undefined,
            "pb_default": Object {},
            "repeat": undefined,
          },
          "windowCoderId": "TODO",
          "windowFn": Object {
            "payload": "",
            "urn": "beam:window_fn:global_windows:v1",
          },
        },
      ],
      Array [
        "ref_Windowing_Windowing_20",
        Object {
          "accumulationMode": 1,
          "allowedLateness": 0,
          "assignsToOneWindow": true,
          "closingBehavior": 1,
          "environmentId": "",
          "mergeStatus": 1,
          "ontimebehavior": 1,
          "outputTime": 1,
          "trigger": Object {
            "afterAll": undefined,
            "afterAny": undefined,
            "afterEach": undefined,
            "afterEndOfWindow": undefined,
            "afterProcessingTime": undefined,
            "afterSynchronizedProcessingTime": undefined,
            "always": undefined,
            "elementCount": undefined,
            "never": undefined,
            "orFinally": undefined,
            "pb_default": Object {},
            "repeat": undefined,
          },
          "windowCoderId": "TODO",
          "windowFn": Object {
            "payload": "",
            "urn": "beam:window_fn:global_windows:v1",
          },
        },
      ],
      Array [
        "ref_Windowing_Windowing_25",
        Object {
          "accumulationMode": 1,
          "allowedLateness": 0,
          "assignsToOneWindow": true,
          "closingBehavior": 1,
          "environmentId": "",
          "mergeStatus": 1,
          "ontimebehavior": 1,
          "outputTime": 1,
          "trigger": Object {
            "afterAll": undefined,
            "afterAny": undefined,
            "afterEach": undefined,
            "afterEndOfWindow": undefined,
            "afterProcessingTime": undefined,
            "afterSynchronizedProcessingTime": undefined,
            "always": undefined,
            "elementCount": undefined,
            "never": undefined,
            "orFinally": undefined,
            "pb_default": Object {},
            "repeat": undefined,
          },
          "windowCoderId": "TODO",
          "windowFn": Object {
            "payload": "",
            "urn": "beam:window_fn:global_windows:v1",
          },
        },
      ],
      Array [
        "ref_Windowing_Windowing_4",
        Object {
          "accumulationMode": 1,
          "allowedLateness": 0,
          "assignsToOneWindow": true,
          "closingBehavior": 1,
          "environmentId": "",
          "mergeStatus": 1,
          "ontimebehavior": 1,
          "outputTime": 1,
          "trigger": Object {
            "afterAll": undefined,
            "afterAny": undefined,
            "afterEach": undefined,
            "afterEndOfWindow": undefined,
            "afterProcessingTime": undefined,
            "afterSynchronizedProcessingTime": undefined,
            "always": undefined,
            "elementCount": undefined,
            "never": undefined,
            "orFinally": undefined,
            "pb_default": Object {},
            "repeat": undefined,
          },
          "windowCoderId": "TODO",
          "windowFn": Object {
            "payload": "",
            "urn": "beam:window_fn:global_windows:v1",
          },
        },
      ],
    ],
  },
  "displayDataList": Array [],
  "requirementsList": Array [],
  "rootTransformIdsList": Array [
    "ref_AppliedPTransform_AppliedPTransform_1",
  ],
}
`;

exports[`Pipeline with one transform 1`] = `
Object {
  "components": Object {
    "codersMap": Array [
      Array [
        "ref_BytesCoder_BytesCoder_3",
        Object {
          "componentCoderIdsList": Array [],
          "spec": Object {
            "payload": "",
            "urn": "beam:coder:bytes:v1",
          },
        },
      ],
      Array [
        "ref_GlobalWindowCoder_GlobalWindowCoder_5",
        Object {
          "componentCoderIdsList": Array [],
          "spec": Object {
            "payload": "",
            "urn": "beam:coder:global_window:v1",
          },
        },
      ],
    ],
    "environmentsMap": Array [],
    "pcollectionsMap": Array [
      Array [
        "ref_PCollection_PCollection_7",
        Object {
          "coderId": "TODO",
          "displayDataList": Array [],
          "isBounded": 2,
          "uniqueName": "ref_PCollection_PCollection_7",
          "windowingStrategyId": "TODO",
        },
      ],
    ],
    "transformsMap": Array [
      Array [
        "ref_AppliedPTransform_AppliedPTransform_1",
        Object {
          "displayDataList": Array [],
          "environmentId": "",
          "inputsMap": Array [],
          "outputsMap": Array [],
          "spec": Object {
            "payload": "function (_input) {
        throw new Error(\\"Must be implemented by subclasses\\");
    }",
            "urn": "beam:transform:javascript:v1",
          },
          "subtransformsList": Array [
            "ref_AppliedPTransform_custom label_2",
          ],
          "uniqueName": "",
        },
      ],
      Array [
        "ref_AppliedPTransform_custom label_2",
        Object {
          "displayDataList": Array [],
          "environmentId": "",
          "inputsMap": Array [],
          "outputsMap": Array [
            Array [
              "None",
              "ref_PCollection_PCollection_7",
            ],
          ],
          "spec": Object {
            "payload": "{\\"doFn\\":{\\"urn\\":\\"beam:dofn:javascript:v1\\",\\"payload\\":\\"function (_element) {\\\\n        throw new Error('Needs to be implemented in subclasses');\\\\n    }\\"},\\"sideInputsMap\\":[],\\"stateSpecsMap\\":[],\\"timerFamilySpecsMap\\":[],\\"restrictionCoderId\\":\\"\\",\\"requestsFinalization\\":false,\\"requiresTimeSortedInput\\":false,\\"requiresStableInput\\":false}",
            "urn": "beam:transform:pardo:v1",
          },
          "subtransformsList": Array [],
          "uniqueName": "custom label",
        },
      ],
    ],
    "windowingStrategiesMap": Array [
      Array [
        "ref_Windowing_Windowing_4",
        Object {
          "accumulationMode": 1,
          "allowedLateness": 0,
          "assignsToOneWindow": true,
          "closingBehavior": 1,
          "environmentId": "",
          "mergeStatus": 1,
          "ontimebehavior": 1,
          "outputTime": 1,
          "trigger": Object {
            "afterAll": undefined,
            "afterAny": undefined,
            "afterEach": undefined,
            "afterEndOfWindow": undefined,
            "afterProcessingTime": undefined,
            "afterSynchronizedProcessingTime": undefined,
            "always": undefined,
            "elementCount": undefined,
            "never": undefined,
            "orFinally": undefined,
            "pb_default": Object {},
            "repeat": undefined,
          },
          "windowCoderId": "TODO",
          "windowFn": Object {
            "payload": "",
            "urn": "beam:window_fn:global_windows:v1",
          },
        },
      ],
    ],
  },
  "displayDataList": Array [],
  "requirementsList": Array [],
  "rootTransformIdsList": Array [
    "ref_AppliedPTransform_AppliedPTransform_1",
  ],
}
`;

exports[`Pipeline with ptransform with impulse 1`] = `
Object {
  "components": Object {
    "codersMap": Array [
      Array [
        "ref_BytesCoder_BytesCoder_3",
        Object {
          "componentCoderIdsList": Array [],
          "spec": Object {
            "payload": "",
            "urn": "beam:coder:bytes:v1",
          },
        },
      ],
      Array [
        "ref_BytesCoder_BytesCoder_8",
        Object {
          "componentCoderIdsList": Array [],
          "spec": Object {
            "payload": "",
            "urn": "beam:coder:bytes:v1",
          },
        },
      ],
      Array [
        "ref_GlobalWindowCoder_GlobalWindowCoder_10",
        Object {
          "componentCoderIdsList": Array [],
          "spec": Object {
            "payload": "",
            "urn": "beam:coder:global_window:v1",
          },
        },
      ],
      Array [
        "ref_GlobalWindowCoder_GlobalWindowCoder_5",
        Object {
          "componentCoderIdsList": Array [],
          "spec": Object {
            "payload": "",
            "urn": "beam:coder:global_window:v1",
          },
        },
      ],
    ],
    "environmentsMap": Array [],
    "pcollectionsMap": Array [
      Array [
        "ref_PCollection_PCollection_11",
        Object {
          "coderId": "TODO",
          "displayDataList": Array [],
          "isBounded": 2,
          "uniqueName": "ref_PCollection_PCollection_11",
          "windowingStrategyId": "TODO",
        },
      ],
    ],
    "transformsMap": Array [
      Array [
        "ref_AppliedPTransform_AppliedPTransform_1",
        Object {
          "displayDataList": Array [],
          "environmentId": "",
          "inputsMap": Array [],
          "outputsMap": Array [],
          "spec": Object {
            "payload": "function (_input) {
        throw new Error(\\"Must be implemented by subclasses\\");
    }",
            "urn": "beam:transform:javascript:v1",
          },
          "subtransformsList": Array [
            "ref_AppliedPTransform_custom transform_2",
          ],
          "uniqueName": "",
        },
      ],
      Array [
        "ref_AppliedPTransform_custom transform/Impulse_7",
        Object {
          "displayDataList": Array [],
          "environmentId": "",
          "inputsMap": Array [
            Array [
              "0",
              "ref_PBegin_PBegin_6",
            ],
          ],
          "outputsMap": Array [
            Array [
              "None",
              "ref_PCollection_PCollection_11",
            ],
          ],
          "spec": Object {
            "payload": "",
            "urn": "beam:transform:impulse:v1",
          },
          "subtransformsList": Array [],
          "uniqueName": "custom transform/Impulse",
        },
      ],
      Array [
        "ref_AppliedPTransform_custom transform_2",
        Object {
          "displayDataList": Array [],
          "environmentId": "",
          "inputsMap": Array [],
          "outputsMap": Array [
            Array [
              "None",
              "ref_PCollection_PCollection_11",
            ],
          ],
          "spec": Object {
            "payload": "function (pcoll) {
                return pcoll.apply(index_1.Impulse);
            }",
            "urn": "beam:transform:javascript:v1",
          },
          "subtransformsList": Array [
            "ref_AppliedPTransform_custom transform/Impulse_7",
          ],
          "uniqueName": "custom transform",
        },
      ],
    ],
    "windowingStrategiesMap": Array [
      Array [
        "ref_Windowing_Windowing_4",
        Object {
          "accumulationMode": 1,
          "allowedLateness": 0,
          "assignsToOneWindow": true,
          "closingBehavior": 1,
          "environmentId": "",
          "mergeStatus": 1,
          "ontimebehavior": 1,
          "outputTime": 1,
          "trigger": Object {
            "afterAll": undefined,
            "afterAny": undefined,
            "afterEach": undefined,
            "afterEndOfWindow": undefined,
            "afterProcessingTime": undefined,
            "afterSynchronizedProcessingTime": undefined,
            "always": undefined,
            "elementCount": undefined,
            "never": undefined,
            "orFinally": undefined,
            "pb_default": Object {},
            "repeat": undefined,
          },
          "windowCoderId": "TODO",
          "windowFn": Object {
            "payload": "",
            "urn": "beam:window_fn:global_windows:v1",
          },
        },
      ],
      Array [
        "ref_Windowing_Windowing_9",
        Object {
          "accumulationMode": 1,
          "allowedLateness": 0,
          "assignsToOneWindow": true,
          "closingBehavior": 1,
          "environmentId": "",
          "mergeStatus": 1,
          "ontimebehavior": 1,
          "outputTime": 1,
          "trigger": Object {
            "afterAll": undefined,
            "afterAny": undefined,
            "afterEach": undefined,
            "afterEndOfWindow": undefined,
            "afterProcessingTime": undefined,
            "afterSynchronizedProcessingTime": undefined,
            "always": undefined,
            "elementCount": undefined,
            "never": undefined,
            "orFinally": undefined,
            "pb_default": Object {},
            "repeat": undefined,
          },
          "windowCoderId": "TODO",
          "windowFn": Object {
            "payload": "",
            "urn": "beam:window_fn:global_windows:v1",
          },
        },
      ],
    ],
  },
  "displayDataList": Array [],
  "requirementsList": Array [],
  "rootTransformIdsList": Array [
    "ref_AppliedPTransform_AppliedPTransform_1",
  ],
}
`;

exports[`Pipeline with ptransform with nothing 1`] = `
Object {
  "components": Object {
    "codersMap": Array [
      Array [
        "ref_BytesCoder_BytesCoder_3",
        Object {
          "componentCoderIdsList": Array [],
          "spec": Object {
            "payload": "",
            "urn": "beam:coder:bytes:v1",
          },
        },
      ],
      Array [
        "ref_GlobalWindowCoder_GlobalWindowCoder_5",
        Object {
          "componentCoderIdsList": Array [],
          "spec": Object {
            "payload": "",
            "urn": "beam:coder:global_window:v1",
          },
        },
      ],
    ],
    "environmentsMap": Array [],
    "pcollectionsMap": Array [],
    "transformsMap": Array [
      Array [
        "ref_AppliedPTransform_AppliedPTransform_1",
        Object {
          "displayDataList": Array [],
          "environmentId": "",
          "inputsMap": Array [],
          "outputsMap": Array [],
          "spec": Object {
            "payload": "function (_input) {
        throw new Error(\\"Must be implemented by subclasses\\");
    }",
            "urn": "beam:transform:javascript:v1",
          },
          "subtransformsList": Array [
            "ref_AppliedPTransform_custom transform_2",
          ],
          "uniqueName": "",
        },
      ],
      Array [
        "ref_AppliedPTransform_custom transform_2",
        Object {
          "displayDataList": Array [],
          "environmentId": "",
          "inputsMap": Array [],
          "outputsMap": Array [
            Array [
              "None",
              "ref_PBegin_PBegin_6",
            ],
          ],
          "spec": Object {
            "payload": "function (pcoll) {
                return pcoll;
            }",
            "urn": "beam:transform:javascript:v1",
          },
          "subtransformsList": Array [],
          "uniqueName": "custom transform",
        },
      ],
    ],
    "windowingStrategiesMap": Array [
      Array [
        "ref_Windowing_Windowing_4",
        Object {
          "accumulationMode": 1,
          "allowedLateness": 0,
          "assignsToOneWindow": true,
          "closingBehavior": 1,
          "environmentId": "",
          "mergeStatus": 1,
          "ontimebehavior": 1,
          "outputTime": 1,
          "trigger": Object {
            "afterAll": undefined,
            "afterAny": undefined,
            "afterEach": undefined,
            "afterEndOfWindow": undefined,
            "afterProcessingTime": undefined,
            "afterSynchronizedProcessingTime": undefined,
            "always": undefined,
            "elementCount": undefined,
            "never": undefined,
            "orFinally": undefined,
            "pb_default": Object {},
            "repeat": undefined,
          },
          "windowCoderId": "TODO",
          "windowFn": Object {
            "payload": "",
            "urn": "beam:window_fn:global_windows:v1",
          },
        },
      ],
    ],
  },
  "displayDataList": Array [],
  "requirementsList": Array [],
  "rootTransformIdsList": Array [
    "ref_AppliedPTransform_AppliedPTransform_1",
  ],
}
`;
